# OpenPerturbation

./: .env.example  .gitignore  API_FIXES_SUMMARY.md  CHANGELOG.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_STATUS.md  Dockerfile  FINAL_PUBLICATION_STATUS.md  FIXES_COMPLETED_SUMMARY.md  GITHUB_REPO_SUMMARY.md  Makefile  OPENPERTURBATION_MASTER_ARTICLE.md  PUBLICATION_CONFIRMED.md  PUBLICATION_READY_SUMMARY.md  PYRIGHT_FIXES_COMPLETED.md  PYRIGHT_FIXES_SUMMARY.md  README.md  RELEASE_v1.1.1_SUMMARY.md  SECURITY.md  ULTIMATE_PR_UPDATE.md  demo.py  demo_api.py  demo_endpoints.py  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_tests.py  test_api_integration.py  test_complete_pipeline.py  test_complete_system.py  test_comprehensive_system.py  test_demo_fix.py  test_real_datasets_integration.py  test_server.py
.github/workflows/: docs.yml  python-ci.yml
docs/: about.md  api_reference.md  contributing.md  cookbooks.md  deployment.md  index.md  master.md  quick_start.md
src/: py.typed
src/agents/: __init__.py  agent_tools.py  conversation_handler.py  openai_agent.py
src/api/: __init__.py  app_factory.py  endpoints.py  models.py  models_broken.py  server.py
src/api/routes/: __init__.py  analysis.py  jobs.py  models.py  system.py
src/causal/: causal_discovery_engine.py  discovery.py  intervention.py
src/config/: config_manager.py
src/data/loaders/: genomics_loader.py  imaging_loader.py  molecular_loader.py
src/data/processors/: augmentation.py  feature_extractor.py  image_processor.py
src/explainability/: attention_maps.py  concept_activation.py  pathway_analysis.py
src/losses/: __init__.py
src/pipeline/: openperturbation_pipeline.py
src/training/: data_modules.py  lightning_modules.py  losses.py  metrics.py
src/utils/: biology_utils.py  logging_config.py  metrics.py
tests/: test_comprehensive.py
